<resources>
    <string name="app_name">Doomsday</string>
    <string name="app_logo">App Logo</string>
    <string name="practice_mode_item">Practice Mode</string>
    <string name="standard_mode_item">Standard Mode</string>
    <string name="challenge_mode_item">Challenge Mode</string>
    <string name="two_player_mode_item">Two-Player Mode</string>
    <string name="scoreboards_item">Scoreboards</string>
    <string name="settings_item">Settings</string>
    <string name="quit_item">Quit</string>
    <string name="select_mode_label">Select A Mode:</string>
    <string name="tutorial_mode_item">Tutorial Mode</string>
    <string name="quiz_mode_item">Quiz Mode</string>
    <string name="select_difficulty_label">Select Difficulty:</string>
    <string name="easy_mode_item">Easy Mode</string>
    <string name="normal_mode_item">Normal Mode</string>
    <string name="hard_mode_item">Hard Mode</string>
    <string name="tutorial_part_1a">
        You can use the Doomsday algorithm to mentally calculate the day of the week for a given date.\n\n
        The first step is to memorise the Doomsday for each month:
    </string>
    <string name="doomsday_list">A list of Doomsdays</string>
    <string name="tutorial_part_1b">Next, assign each weekday a numerical value:</string>
    <string name="tutorial_part_1c">
        Sunday: 0, Monday: 1\n\n
        Tuesday: 2, Wednesday: 3\n\n
        Thursday: 4, Friday: 5\n\n
        Saturday: 6
    </string>
    <string name="tutorial_part_2a">Anchor days also need to be memorised:</string>
    <string name="anchordays_list">A list of anchor days</string>
    <string name="tutorial_part_2b">With the previous information in mind, you can now calculate the day of the week using the following formula: (mod = remainder of division)</string>
    <string name="tutorial_part_2c">
        (Mod = remainder of division)\n\n
        One final tip, memorise the following multiples:\n\n
        Multiples of 7:\n7, 14, 21, 28\n\n
        Multiples of 12:\n12, 24, 36, 48,\n60, 72, 84, 96
    </string>
    <string name="tutorial_part_3a">Here, the date 3/2/1990 is used as an example:</string>
    <string name="doomsday_example">An example of the Doomsday algorithm in use</string>
    <string name="tutorial_part_3b">
        The anchor day for 1990 is 3, which is Wednesday and the closest Doomsday to 3/2/1990 is 28/2. Next, the number of days between the Doomsday and our given date is 25.\n\n
        25 divided by 7 gives a quotient of 3, meaning there is 3 weeks (21 days) between the Doomsday and the given date.\n\n
        25 - 21 = 4, so going 4 days back from Wednesday (the Doomsday) gives Saturday.\n\n
        This means that 3/2/1990 occurred on a Saturday
    </string>
    <string name="swipe_message">Swipe left to continue…</string>
    <string name="good_luck">Good Luck!</string>
    <string name="question_item">Question </string>
    <string name="default_question_number">1</string>
    <string name="question_1">Select the weekday number for Friday</string>
    <string name="answer_1a">1</string>
    <string name="answer_1b">3</string>
    <string name="answer_1c">5</string>
    <string name="answer_1d">0</string>
    <string name="question_2">Wednesday is the anchor day for which century?</string>
    <string name="answer_2a">1800 – 1899</string>
    <string name="answer_2b">1900 – 1999</string>
    <string name="answer_2c">2000 – 2099</string>
    <string name="answer_2d">2100 – 2199</string>
    <string name="question_3">Which month\'s Doomsday is affected by a leap year?</string>
    <string name="answer_3a">January</string>
    <string name="answer_3b">March</string>
    <string name="answer_3c">August</string>
    <string name="answer_3d">September</string>
    <string name="question_4">What is the Doomsday for July?</string>
    <string name="answer_4a">1st</string>
    <string name="answer_4b">7th</string>
    <string name="answer_4c">11th</string>
    <string name="answer_4d">21st</string>
    <string name="question_5">Which of these is a correct Doomsday for February?</string>
    <string name="answer_5a">2</string>
    <string name="answer_5b">12</string>
    <string name="answer_5c">27</string>
    <string name="answer_5d">29</string>
    <string name="answer_button">Answer Button</string>
    <string name="divider">Screen Divider</string>
    <string name="practice_mode_info">Information:\n\nWelcome!\n\nUse this mode to learn about and practice calculating the Doomsday algorithm!</string>
    <string name="standard_mode_info">Information:\n\nSolve 5 dates as quickly and correctly as you can!\n\nTry your best to beat your previous attempts!</string>
    <string name="default_date">3/2/1990</string>
    <string name="score">Score: </string>
    <string name="default_standard_score">0/5</string>
    <string name="default_challenge_score">0</string>
    <string name="player_one">P1: </string>
    <string name="player_two">P2: </string>
    <string name="timer">Time: </string>
    <string name="default_standard_time">0:00</string>
    <string name="default_challenge_time">0:00:000</string>
    <string name="refresh_button">Refresh Button</string>
    <string name="leap_year">(Leap Year)</string>
    <string name="common_year">(Common Year)</string>
    <string name="doomsday_algorithm">Doomsday Algorithm</string>
    <string name="sigma_symbol">Sigma Symbol</string>
    <string name="end_of_round">End of Round!</string>
    <string name="two_player_win">You Win!</string>
    <string name="two_player_lose">You Lose…</string>
    <string name="two_player_draw">Draw!</string>
    <string name="monday_button">Monday Button</string>
    <string name="tuesday_button">Tuesday Button</string>
    <string name="wednesday_button">Wednesday Button</string>
    <string name="thursday_button">Thursday Button</string>
    <string name="friday_button">Friday Button</string>
    <string name="saturday_button">Saturday Button</string>
    <string name="sunday_button">Sunday Button</string>
    <string name="cancel_button">Cancel Button</string>
    <string name="doomsday_button">Doomsday Button</string>
    <string name="anchor_button">Anchor Button</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="challenge">Challenge</string>
    <string name="number_column">#</string>
    <string name="score_column">Score</string>
    <string name="time_overall">Overall Time</string>
    <string name="time_average">Average Time</string>
    <string name="time_column">Time</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="date_format">Select Date Format</string>
    <string name="locale_format">Locale:</string>
    <string name="uk">UK</string>
    <string name="us">US</string>
    <string name="format">Format:</string>
    <string name="alphabetic">Alphabetic</string>
    <string name="numeric">Numeric</string>
    <string name="example">Example:</string>
    <string name="uk_num_date">13/10/2017</string>
    <string name="uk_aplha_date">13 Oct 2017</string>
    <string name="us_num_date">10/13/2017</string>
    <string name="us_alpha_date">Oct 13 2017</string>
    <string name="save_button">Save Button</string>
    <string name="left_arrow">Left Arrow</string>
    <string name="right_arrow">Right Arrow</string>
    <string name="delete_mode_button">Delete Mode Button</string>
    <string name="delete_all_button">Delete All Button</string>
</resources>